Eliminate usages of deprecated methods